# oasis-ssvm-runtime

./: Cargo.toml  Makefile  README.md
api/: Cargo.toml
api/src/: api.rs  lib.rs
common/: Cargo.toml
common/src/: genesis.rs  lib.rs  parity.rs  storage.rs
common/src/confidential/: confidential_ctx.rs  crypto.rs  mod.rs
gateway/: Cargo.toml
gateway/src/: informant.rs  lib.rs  middleware.rs  pubsub.rs  rpc.rs  rpc_apis.rs  run.rs  servers.rs  translator.rs  util.rs
gateway/src/impls/: mod.rs  web3.rs
gateway/src/traits/: oasis.rs
genesis/: Cargo.toml
keymanager-runtime/: Cargo.toml
keymanager-runtime/src/: api.rs  main.rs
oasis-parity/: Cargo.toml
oasis-parity/rpc/: Cargo.toml
oasis-parity/rpc/src/: lib.rs
oasis-parity/rpc/src/v1/helpers/: errors.rs
oasis-parity/rpc/src/v1/types/: block_number.rs  mod.rs
oasis-parity/src/: lib.rs  mkvs.rs
scripts/: test_e2e.sh
src/: block.rs  dispatcher.rs  lib.rs  main.rs  methods.rs
test-client/: Cargo.toml
test-client/src/: main.rs
tests/: fixture.json
