[package]
name = "example-runtime"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
edition = "2018"

[dependencies]
# Internal.
oasis-runtime-api = { path = "./api" }

# For Compatible with Openethereum
cc = "1.0.41"

# Oasis Core.
oasis-core-runtime = { git = "https://github.com/oasislabs/oasis-core", tag = "v20.7" }

# Others.
failure = "0.1.5"
io-context = "0.2.0"


[build-dependencies]
oasis-core-tools = { git = "https://github.com/oasislabs/oasis-core", tag = "v20.7" }


[workspace]
members = [
    "api",
    "common",
    "test-client",
]
