[package]
name = "oasis-ssvm-runtime"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
edition = "2018"

[package.metadata.fortanix-sgx]
heap-size = 134217728
stack-size = 2097152
threads = 2

[[bin]]
name = "oasis-ssvm-runtime"
path ="bin/main.rs"

[dependencies]
# Internal.
oasis-ssvm-runtime-common = { path = "./common" }
oasis-ssvm-runtime-api = { path = "./api" }
oasis-ssvm-runtime-parity = { path = "./oasis-parity" }

# For Compatible with Openethereum
cc = "1.0.41"

ethcore = { git = "https://github.com/openethereum/openethereum", tag = "v3.0.1" }
account-state = { git = "https://github.com/openethereum/openethereum", tag = "v3.0.1" }
vm = { git = "https://github.com/openethereum/openethereum", tag = "v3.0.1" }
#EnvInfo = { git = "https://github.com/openethereum/openethereum", tag = "v3.0.1" }
ethereum-types = "0.9.2" # ori 0.3.0
# Oasis Core.
oasis-core-runtime = { git = "https://github.com/oasislabs/oasis-core", tag = "v20.7" }
oasis-core-keymanager-client = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.7" }

# Others.
failure = "0.1.5"
io-context = "0.2.0"
serde_bytes = "0.11"
slog = "2.4.1"

[build-dependencies]
oasis-core-tools = { git = "https://github.com/oasislabs/oasis-core", tag = "v20.7" }


[workspace]
members = [
    "api",
    "common",
    "oasis-parity",
    "test-client",
]
