[package]
name = "oasis-ssvm-runtime-api"
version = "0.2.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
edition = "2018"

[dependencies]
oasis-core-runtime = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.7" }
ethereum-types = "0.9.2" # ori 0.3.0
failure = "0.1.5"
serde = "1.0.71"
serde_derive = "1.0"
serde_bytes = "~0.10"