[package]
name = "oasis-ssvm-runtime-common"
version = "0.3.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
# For Compatible with Openethereum
cc = "1.0.41"

oasis-ssvm-runtime-parity = { path = "../oasis-parity" }

# Oasis Core.
oasis-core-runtime = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.7" }
oasis-core-keymanager-client = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.7" }

# Openethereum
ethcore = { git = "https://github.com/openethereum/openethereum", tag = "v3.0.1" }
vm = { git = "https://github.com/openethereum/openethereum", tag = "v3.0.1" }
spec = { git = "https://github.com/openethereum/openethereum.git", tag = "v3.0.1"}
keccak-hasher = { git = "https://github.com/openethereum/openethereum", tag = "v3.0.1" }
account-state = { git = "https://github.com/openethereum/openethereum", tag = "v3.0.1" }
ethereum-types = "0.9.2"

# Others
elastic-array = "0.10"
failure = "0.1.5"
io-context = "0.2.0"
lazy_static = "1.3.0"
zeroize = "1.1.0"
keccak-hash = "0.5.1" # 0.4.0 will CE
hash-db = "0.15.0"
kvdb = "0.5.0"

[features]
default = []
benchmarking = []
production-genesis = []
test = []

