[package]
name = "genesis"
version = "0.3.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
oasis-ssvm-runtime-common = { path = "../common" }

oasis-core-client = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.7" }
oasis-core-runtime = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.7" }

clap = "2.29.1"
ethereum-types = "0.9.2" # ori 0.3.0
filebuffer = "0.4.0"
hex = "0.3.1"
rlp = "0.4.0"
ethcore = { git = "https://github.com/openethereum/openethereum", tag = "v3.0.1" }
spec = { git = "https://github.com/openethereum/openethereum.git", tag = "v3.0.1"}
account-state = { git = "https://github.com/openethereum/openethereum", tag = "v3.0.1" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_bytes = "~0.10"
grpcio = "0.4.4"
failure = "0.1.5"
io-context = "0.2.0"

[[bin]]
name = "genesis-init"
path ="bin/genesis_init.rs"

[[bin]]
name = "genesis-playback"
path ="bin/genesis_playback.rs"