[package]
name = "oasis-ssvm-runtime-parity"
version = "0.3.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
oasis-parity-rpc = { path = "rpc" }
parity-rpc = { git = "https://github.com/openethereum/openethereum", tag = "v3.0.1" }

[features]
default = []
benchmarking = []
production-genesis = []
test = []

