[package]
description = "OpenEthereum JSON-RPC Servers (WS, HTTP, IPC)"
name = "oasis-parity-rpc"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[lib]

[dependencies]
parity-rpc = { git = "https://github.com/openethereum/openethereum", tag = "v3.0.1" }
common-types = { git = "https://github.com/openethereum/openethereum", tag = "v3.0.1" }
ethereum-types = "0.9.2"
log = "0.3"